Upgrade plugins/dependencies